deployments/pathweb/node-red/patches/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-red
spec:
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/53/UDP/DNS>"
    spec:
      # runtimeClassName: gvisor
      priorityClassName: rfhome-high-priority
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      containers:
        - name: node-red
          volumeMounts:
            - mountPath: /data/settings.js
              name: settings
              subPath: settings.js
            - mountPath: /extra-tools
              name: extra-tools
              readOnly: true
          resources:
            requests:
              cpu: 15m
              memory: 1169M
            limits:
              cpu: '2'
              memory: 1297M
      volumes:
        - name: settings
          configMap:
            name: node-red-settings
        - name: extra-tools
          emptyDir: {}
    volumeClaimTemplates:
      - metadata:
          name: data
        spec:
          storageClassName: "ceph-rbd"
          accessModes: [ "ReadWriteOnce" ]
          resources:
            requests:
              storage: 5Gi
